--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -107,11 +107,11 @@
 
 		policy_option_tec_egalitarian_C:0 "$ethic_egalitarian$ Hierarchization"
 		policy_option_tec_egalitarian_C_name:0 "$policy_option_tec_egalitarian_C$"
-		policy_option_tec_egalitarian_C_desc:0 "A true separation of powers will motivate a proper understanding and faster elaborations of potential measures that will benefit our kind as a whole.\n\n§EThis policy is focused on £mod_edict_cap_add£ §HCouncil§! and §EEdicts§! performance§!\n"
+		policy_option_tec_egalitarian_C_desc:0 "A true separation of powers will motivate a proper understanding and faster elaborations of potential measures that will benefit our kind as a whole.\n\n§EThis policy is focused on £tec_edict_cap_add£ §HCouncil§! and §EEdicts§! performance§!\n"
 
 		policy_option_fanatic_tec_egalitarian_C:0 "$policy_option_tec_egalitarian_C$"
 		policy_option_fanatic_tec_egalitarian_C_name:0 "$policy_option_tec_egalitarian_C$"
-		policy_option_fanatic_tec_egalitarian_C_desc:0 "A true separation of powers will motivate a proper understanding and faster elaborations of potential measures that will benefit our kind as a whole.\n\n§EThis policy is focused on £mod_edict_cap_add£ §HCouncil§! and §EEdicts§! performance§!\n"
+		policy_option_fanatic_tec_egalitarian_C_desc:0 "A true separation of powers will motivate a proper understanding and faster elaborations of potential measures that will benefit our kind as a whole.\n\n§EThis policy is focused on £tec_edict_cap_add£ §HCouncil§! and §EEdicts§! performance§!\n"
 
 
 		#- Authoritarian
@@ -862,7 +862,7 @@
 	job_tec_academician:0 "Academician"
 	job_tec_academician_plural:0 "Academicians"
 	job_tec_academician_desc:0 "to do"
-	job_tec_academician_effect_desc:0 "£job_tec_academician£ $job_tec_academician_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_academician_effect_desc:0 "£job_tec_academician£ $job_tec_academician_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_academician_add:0 "$job_tec_academician$ Jobs"
 	mod_job_tec_academician_per_pop:0 "§G+1§! $job_tec_academician$ Job per $VALUE$ Pops"
 	mod_job_tec_academician_per_pop_short:0 "\n§G+1§! £mod_job_tec_academician_add£ per $VALUE$ £pop£"
@@ -882,7 +882,7 @@
 	job_tec_state_specialist:0 "Functionary"
 	job_tec_state_specialist_plural:0 "Functionaries"
 	job_tec_state_specialist_desc:0 "to do"
-	job_tec_state_specialist_effect_desc:0 "£job_tec_state_specialist£ $job_tec_state_specialist_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_state_specialist_effect_desc:0 "£job_tec_state_specialist£ $job_tec_state_specialist_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_state_specialist_add:0 "$job_tec_state_specialist$ Jobs"
 	mod_job_tec_state_specialist_per_pop:0 "§G+1§! $job_tec_state_specialist$ Job per $VALUE$ Pops"
 	mod_job_tec_state_specialist_per_pop_short:0 "\n§G+1§! £mod_job_tec_state_specialist_add£ per $VALUE$ £pop£"
@@ -893,7 +893,7 @@
 	job_tec_hivelinked_menial:0 "Workforce Drone"
 	job_tec_hivelinked_menial_plural:0 "Workforce Drones"
 	job_tec_hivelinked_menial_desc:0 "Connected to a emulated gestalt consciouness signal and their brethren, these drones serve the empire doing several menial tasks."
-	job_tec_hivelinked_menial_effect_desc:0 "£job_tec_hivelinked_menial£ $job_tec_hivelinked_menial_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_menial_effect_desc:0 "£job_tec_hivelinked_menial£ $job_tec_hivelinked_menial_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_menial_add:0 "$job_tec_hivelinked_menial$ Jobs"
 	mod_job_tec_hivelinked_menial_per_pop:0 "§G+1§! $job_tec_hivelinked_menial$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_menial_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_menial_add£ per $VALUE$ £pop£"
@@ -901,7 +901,7 @@
 	job_tec_hivelinked_maintenance:0 "Caretaking Drone"
 	job_tec_hivelinked_maintenance_plural:0 "Caretaking Drones"
 	job_tec_hivelinked_maintenance_desc:0 "Connected to a emulated gestalt consciousness signal and their brethren, these drones serve the population and infrastructure by relentlessly keeping it functional."
-	job_tec_hivelinked_maintenance_effect_desc:0 "£job_tec_hivelinked_maintenance£ $job_tec_hivelinked_maintenance_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_maintenance_effect_desc:0 "£job_tec_hivelinked_maintenance£ $job_tec_hivelinked_maintenance_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_maintenance_add:0 "$job_tec_hivelinked_maintenance$ Jobs"
 	mod_job_tec_hivelinked_maintenance_per_pop:0 "§G+1§! $job_tec_hivelinked_maintenance$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_maintenance_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_maintenance_add£ per $VALUE$ £pop£"
@@ -909,7 +909,7 @@
 	job_tec_hivelinked_research:0 "Intellectual Drone"
 	job_tec_hivelinked_research_plural:0 "Intellectual Drones"
 	job_tec_hivelinked_research_desc:0 "Highly intelligent and close-to-autonomous drones dedicated to research and development collaboration."
-	job_tec_hivelinked_research_effect_desc:0 "£job_tec_hivelinked_research£ $job_tec_hivelinked_research_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_research_effect_desc:0 "£job_tec_hivelinked_research£ $job_tec_hivelinked_research_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_research_add:0 "$job_tec_hivelinked_research$ Jobs"
 	mod_job_tec_hivelinked_research_per_pop:0 "§G+1§! $job_tec_hivelinked_research$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_research_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_research_add£ per $VALUE$ £pop£"
@@ -917,7 +917,7 @@
 	job_tec_hivelinked_alloys:0 "Fabrication Drone"
 	job_tec_hivelinked_alloys_plural:0 "Fabrication Drones"
 	job_tec_hivelinked_alloys_desc:0 "These skilled drones retain alloy and polymer creation techniques from its original consciousness, and now they are truly consecrated to its production."
-	job_tec_hivelinked_alloys_effect_desc:0 "£job_tec_hivelinked_alloys£ $job_tec_hivelinked_alloys_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_alloys_effect_desc:0 "£job_tec_hivelinked_alloys£ $job_tec_hivelinked_alloys_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_alloys_add:0 "$job_tec_hivelinked_alloys$ Jobs"
 	mod_job_tec_hivelinked_alloys_per_pop:0 "§G+1§! $job_tec_hivelinked_alloys$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_alloys_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_alloys_add£ per $VALUE$ £pop£"
@@ -925,7 +925,7 @@
 	job_tec_hivelinked_trade:0 "Fabrication Drone"
 	job_tec_hivelinked_trade_plural:0 "Fabrication Drones"
 	job_tec_hivelinked_trade_desc:0 "These skilled drones retain alloy and polymer creation techniques from its original consciousness, and now they are truly consecrated to its production."
-	job_tec_hivelinked_trade_effect_desc:0 "£job_tec_hivelinked_trade£ $job_tec_hivelinked_trade_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_trade_effect_desc:0 "£job_tec_hivelinked_trade£ $job_tec_hivelinked_trade_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_trade_add:0 "$job_tec_hivelinked_trade$ Jobs"
 	mod_job_tec_hivelinked_trade_per_pop:0 "§G+1§! $job_tec_hivelinked_trade$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_trade_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_trade_add£ per $VALUE$ £pop£"
