--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -203,7 +203,7 @@
  job_tec_high_paperwork_priest:0 "Bureau-Dean"
  job_tec_high_paperwork_priest_plural:0 "Bureau-Dean"
  job_tec_high_paperwork_priest_desc:0 "Experts and wise priest consecrated to the highest and most tedious and sacred bureaucratic affairs. Rumours say to even barely contact them require a request signed in triplicate."
- job_tec_high_paperwork_priest_effect_desc:0 "£job_tec_high_paperwork_priest£ $job_tec_high_paperwork_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_high_paperwork_priest_effect_desc:0 "£job_tec_high_paperwork_priest£ $job_tec_high_paperwork_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_high_paperwork_priest_add:0 "$job_tec_high_paperwork_priest$ Jobs"
  mod_job_tec_high_paperwork_priest_per_pop:0 "§G+1§! $job_tec_high_paperwork_priest$ Job per $VALUE$ Pops"
@@ -212,7 +212,7 @@
  job_tec_paperwork_priest:0 "Bureau-Monk"
  job_tec_paperwork_priest_plural:0 "Bureau-Monks"
  job_tec_paperwork_priest_desc:0 "An individual consecrated to paperwork and administrative illumination. Do not disturb them while they transcribe the holy words of bureaucracy."
- job_tec_paperwork_priest_effect_desc:0 "£job_tec_paperwork_priest£ $job_tec_paperwork_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_paperwork_priest_effect_desc:0 "£job_tec_paperwork_priest£ $job_tec_paperwork_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_paperwork_priest_add:0 "$job_tec_paperwork_priest$ Jobs"
  mod_job_tec_paperwork_priest_per_pop:0 "§G+1§! $job_tec_paperwork_priest$ Job per $VALUE$ Pops"
@@ -230,7 +230,7 @@
  job_tec_high_atom_priest:0 "Opulence Bishop"
  job_tec_high_atom_priest_plural:0 "Opulence Bishops"
  job_tec_high_atom_priest_desc:0 "to do"
- job_tec_high_atom_priest_effect_desc:0 "£job_tec_high_atom_priest£ $job_tec_high_atom_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_high_atom_priest_effect_desc:0 "£job_tec_high_atom_priest£ $job_tec_high_atom_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_high_atom_priest_add:0 "$job_tec_high_atom_priest$ Jobs"
  mod_job_tec_high_atom_priest_per_pop:0 "§G+1§! $job_tec_high_atom_priest$ Job per $VALUE$ Pops"
@@ -239,7 +239,7 @@
  job_tec_atom_priest:0 "Parson"
  job_tec_atom_priest_plural:0 "Parsons"
  job_tec_atom_priest_desc:0 "to do"
- job_tec_atom_priest_effect_desc:0 "£job_tec_atom_priest£ $job_tec_atom_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_atom_priest_effect_desc:0 "£job_tec_atom_priest£ $job_tec_atom_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_atom_priest_add:0 "$job_tec_atom_priest$ Jobs"
  mod_job_tec_atom_priest_per_pop:0 "§G+1§! $job_tec_atom_priest$ Job per $VALUE$ Pops"
@@ -257,7 +257,7 @@
  job_tec_high_paranormal_priest:0 "Cabalist"
  job_tec_high_paranormal_priest_plural:0 "Cabalists"
  job_tec_high_paranormal_priest_desc:0 "to do"
- job_tec_high_paranormal_priest_effect_desc:0 "£job_tec_high_paranormal_priest£ $job_tec_high_paranormal_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_high_paranormal_priest_effect_desc:0 "£job_tec_high_paranormal_priest£ $job_tec_high_paranormal_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_high_paranormal_priest_add:0 "$job_tec_high_paranormal_priest$ Jobs"
  mod_job_tec_high_paranormal_priest_per_pop:0 "§G+1§! $job_tec_high_paranormal_priest$ Job per $VALUE$ Pops"
@@ -266,7 +266,7 @@
  job_tec_paranormal_priest:0 "Acolyte"
  job_tec_paranormal_priest_plural:0 "Acolytes"
  job_tec_paranormal_priest_desc:0 "to do"
- job_tec_paranormal_priest_effect_desc:0 "£job_tec_paranormal_priest£ $job_tec_paranormal_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_paranormal_priest_effect_desc:0 "£job_tec_paranormal_priest£ $job_tec_paranormal_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_paranormal_priest_add:0 "$job_tec_paranormal_priest$ Jobs"
  mod_job_tec_paranormal_priest_per_pop:0 "§G+1§! $job_tec_paranormal_priest$ Job per $VALUE$ Pops"
@@ -293,7 +293,7 @@
  job_tec_high_wealth_priest:0 "Opulence Bishop"
  job_tec_high_wealth_priest_plural:0 "Opulence Bishops"
  job_tec_high_wealth_priest_desc:0 "to do"
- job_tec_high_wealth_priest_effect_desc:0 "£job_tec_high_wealth_priest£ $job_tec_high_wealth_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_high_wealth_priest_effect_desc:0 "£job_tec_high_wealth_priest£ $job_tec_high_wealth_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_high_wealth_priest_add:0 "$job_tec_high_wealth_priest$ Jobs"
  mod_job_tec_high_wealth_priest_per_pop:0 "§G+1§! $job_tec_high_wealth_priest$ Job per $VALUE$ Pops"
@@ -302,7 +302,7 @@
  job_tec_wealth_priest:0 "Parson"
  job_tec_wealth_priest_plural:0 "Parsons"
  job_tec_wealth_priest_desc:0 "to do"
- job_tec_wealth_priest_effect_desc:0 "£job_tec_wealth_priest£ $job_tec_wealth_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_wealth_priest_effect_desc:0 "£job_tec_wealth_priest£ $job_tec_wealth_priest_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_wealth_priest_add:0 "$job_tec_wealth_priest$ Jobs"
  mod_job_tec_wealth_priest_per_pop:0 "§G+1§! $job_tec_wealth_priest$ Job per $VALUE$ Pops"
@@ -320,9 +320,9 @@
  job_tec_mentat:0 "Mentat"
  job_tec_mentat_plural:0 "Mentats"
  job_tec_mentat_desc:0 "Calculators, mathematicians, bureaucrats and overall data-brokers, mentats are living computers that surpass the expectations and limits of organic minds."
- job_tec_mentat_effect_desc_regular:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_mentat_effect_desc_regular:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and £tec_edict_cap_add£ §YEdict Funds§!."
  job_tec_mentat_effect_desc_corporate:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and §Y$tec_loc_trade_value$§!."
- job_tec_mentat_effect_desc:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_mentat_effect_desc:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and £tec_edict_cap_add£ §YEdict Funds§!."
  #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
  mod_job_tec_mentat_add:0 "$job_tec_mentat$ Jobs"
  mod_job_tec_mentat_per_pop:0 "§G+1§! $job_tec_mentat$ Job per $VALUE$ Pops"
