--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -160,7 +160,7 @@
 	tec_evaluator_cleanup:0 "[Owner.tec_ev_eco_bonus][Owner.tec_ev_relation_bonus][Owner.tec_ev_ego_bonus]"
 	tec_ev_overconsumption_bonus_desc:0 ", §Y£building£ $mod_planet_structures_cost_mult$ Reduction§!"
 	tec_ev_preservation_bonus_desc:0 ", §Y£building£ $mod_planet_structures_upkeep_mult$ Reduction§!"
-	tec_ev_empathy_bonus_desc:0 ", §Y£mod_edict_cap_add£ Edict Funds§!"
+	tec_ev_empathy_bonus_desc:0 ", §Y£tec_edict_cap_add£ Edict Funds§!"
 	tec_ev_apathy_bonus_desc:0 ", §Y£crime£ Deviancy Reduction§!"
 	tec_ev_introspective_bonus_desc:0 ", §Y£pop£ $MOD_POP_AMENITIES_USAGE_MULT$ Reduction§!"
 	tec_ev_extrospective_bonus_desc:0 ", §Y£job_researcher£ Researcher Upkeep Reduction§!"
