--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -116,7 +116,7 @@
  tr_psionics_breach_shroud_tooltip:0 "Allows §MInfused Explorations§! of the Shroud, which remove neutral outcomes and greatly reduces the chance of negative outcomes.\nTelepaths now provide an additional §G+5%§! $mod_planet_psionic_jobs_produces_mult$."
 
  tr_psionics_shrouded_encryption:0 "Shrouded Communications"
- tr_psionics_shrouded_encryption_tooltip:0 "Gains §G+10§! base Intel.\nGrants the £mod_edict_cap_add£ §MSight Beyond Sight§M Edict."
+ tr_psionics_shrouded_encryption_tooltip:0 "Gains §G+10§! base Intel.\nGrants the £tec_edict_cap_add£ §MSight Beyond Sight§M Edict."
 
 # Genetic
 # ------------------------------------------------------------
