--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -59,7 +59,7 @@
 
 	tec_loc_strategic_resources: "£trigger_tec_rare_resources£ §YStrategic Resources§!"
 
-	tec_loc_edict_cap_icon:0 "£mod_edict_cap_add£"
+	tec_loc_edict_cap_icon:0 "£tec_edict_cap_add£"
 	tec_loc_edict_cap:0 "$tec_loc_edict_cap_icon$ §YEdict Funds§!"
 
  # Fake resource locs
