--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -718,7 +718,7 @@
 
 	civic_distinguished_admiralty:0 "§M£tec_civic_leader£§!Distinguished Admiralty"
 	civic_distinguished_admiralty_desc:0 "['concept_tec_leader_civic']\n\nThe Fleet and the Admiralty have unusually prominent roles in this society, wielding a great deal of influence in political circles. They have the pick of the litter when it comes to new military recruits."
-	civic_distinguished_admiralty_tooltip:0 "§YIf combined with Elitist ethic, the +2 Leader Starting Level modifiers are converted to +1 Leader Strating Trait§!"
+	civic_distinguished_admiralty_tooltip:0 "§YIf combined with Elitist ethic, the +2 Leader Starting Level modifiers are converted to +1 Leader Starting Trait§!"
   civic_distinguished_admiralty_tooltip_elitist: ""
 
 	civic_heroic_tales:0 "§M£tec_civic_leader£§!Heroic Past"
