Druids and occultists councilors and eco category

--- a/localisation/english/zz_evolved_categories_l_english.yml
+++ b/localisation/english/zz_evolved_categories_l_english.yml
@@ -59,14 +59,14 @@
  decisions_ecu: "Ecumenopolis Decisions"
  habitats: "Habitats"
  tec_protoworlds: "Protoworlds"
- planet_criminals: "Criminals"
- planet_colonists: "Colonists"
- planet_tec_trade_drones: "Blockchain Drones"
- planet_tec_labour_heroes: "Labour Heroes"
- planet_tec_transcends: "Transcendents"
-
- planet_tec_batteries: "Organic Batteries"
-
+ planet_criminals: "$job_criminal_plural$"
+ planet_colonists: "$job_colonist_plural$"
+ planet_tec_trade_drones: "$job_tec_trade_drone_plural$"
+ planet_tec_labour_heroes: "$job_labour_hero_plural$"
+ planet_tec_transcends: "$job_transcend_plural$"
+ planet_tec_occultists: "$job_tec_minor_occultist_plural$"
+ planet_tec_batteries: "$job_organic_battery_plural$"
+ planet_tec_druids: "$job_druid_plural$"
 
 leader_rulers:0 "Rulers"
 leader_envoys:0 "Envoys"
